<resources>
    <string name="app_name">Act11</string>
    <string name="txt_codigo">Codigo del producto</string>
    <string name="txt_descripcion">Descripcion del producto</string>
    <string name="txt_precio">Precio del producto</string>
    <string name="btn_registrar">Registrar producto</string>
    <string name="btn_buscar">Buscar producto</string>
    <string name="btn_eliminar">Eliminar producto</string>
    <string name="btn_modificar">Modificar producto</string>
</resources>